using pipes for subscribing to observables for auto disposal

--- a/src/app/components/work-interval/work-interval.component.html
+++ b/src/app/components/work-interval/work-interval.component.html
@@ -4,4 +4,4 @@
         <app-timer [time]=1 (isExpired)="checkExpiry($event)"></app-timer>
     </div>
 </div>
-<app-break-interval *ngIf="expired"></app-break-interval>
+<!-- <app-break-interval *ngIf="expired"></app-break-interval> -->
