--- a/src/app/components/timer/timer.component.html
+++ b/src/app/components/timer/timer.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center flex-column">
     <div>Focus on your work.</div>
-    <h3>testing {{workTimerSeconds$ | async}}</h3>
+    <h3>testing {{workTimerMinute$ | async}} {{workTimerSeconds$ | async}}</h3>
     <h1>{{time}}:<span *ngIf="workTimerStarted">{{onScreenSeconds}}</span><span *ngIf="!workTimerStarted">{{zeroPlaceholder}}</span></h1>
     <div class="w-100 d-flex border justify-content-center">
         <div class="w-25 d-flex justify-content-evenly">
