--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-work-interval></app-work-interval>
+<app-work-interval *ngIf="!state.workModeDisabled"></app-work-interval>
+<app-break-interval *ngIf="state.workModeDisabled"></app-break-interval>
