--- a/src/app/components/work-interval/work-interval.component.html
+++ b/src/app/components/work-interval/work-interval.component.html
@@ -1,7 +1,8 @@
-<div *ngIf="!expired" class="container-fluid h-full position-relative p-0 m-0">
-    <div class="position-absolute clock-body w-100 p-0 m-0">
-        <h3>Pomodoro clock</h3>
-        <app-timer [time]=1 (isExpired)="checkExpiry($event)"></app-timer>
+<div class="container-fluid h-full position-relative p-0 m-0">
+    <div class="position-absolute clock-body w-100 p-0 m-0 d-flex justify-content-center">
+        <div class="w-50 bg-white clock-core">
+            <h3>Pomodoro clock</h3>
+        <app-timer [time]=1 message="Focus on your work." (isExpired)="checkExpiry($event)"></app-timer>
+        </div>
     </div>
 </div>
-<!-- <app-break-interval *ngIf="expired"></app-break-interval> -->
