fully functional all bugs fixed without css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-work-interval *ngIf="!state.workModeDisabled"></app-work-interval>
-<app-break-interval *ngIf="state.workModeDisabled"></app-break-interval>
+<app-work-interval *ngIf="!state.status"></app-work-interval>
+<app-break-interval *ngIf="state.status"></app-break-interval>
