--- a/src/app/components/timer/timer.component.html
+++ b/src/app/components/timer/timer.component.html
@@ -4,8 +4,9 @@
     <h1>{{time}}:<span *ngIf="workTimerStarted">{{onScreenSeconds}}</span><span *ngIf="!workTimerStarted">{{zeroPlaceholder}}</span></h1>
     <div class="w-100 d-flex border justify-content-center">
         <div class="w-25 d-flex justify-content-evenly">
-            <button #start class="btn btn-success buttons" (click)="startWorkTimer()">Start</button>
-            <button class="btn btn-secondary ml-3 buttons" (click)="pauseTimer()">Pause</button>
+            <button #start class="btn btn-success buttons" *ngIf="!state.dirtyPage" (click)="startWorkTimer();dirty()">Start</button>
+            <button #start class="btn btn-success buttons" *ngIf="isPaused" (click)="resumeWorkTimer()">Resume</button>
+            <button class="btn btn-secondary ml-3 buttons" *ngIf="!isPaused" (click)="pauseTimer()">Pause</button>
         </div>
     </div>
 </div>
