--- a/src/app/components/break-interval/break-interval.component.html
+++ b/src/app/components/break-interval/break-interval.component.html
@@ -1,4 +1,4 @@
-<div></div>
-<div>
+<div class="backdrop"></div>
+<div class="timer-body">
     <app-timer [time]=5 message="Stop and catch a breath." (isExpired)="checkExpiry($event)"></app-timer>
 </div>
