--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!-- <app-work-interval *ngIf="!state.status"></app-work-interval>
-<app-break-interval *ngIf="state.status"></app-break-interval> -->
-<app-break-interval></app-break-interval>
+<app-work-interval *ngIf="!state.status"></app-work-interval>
+<app-break-interval *ngIf="state.status"></app-break-interval>
+<!-- <app-break-interval></app-break-interval> -->
