--- a/src/app/components/break-interval/break-interval.component.html
+++ b/src/app/components/break-interval/break-interval.component.html
@@ -1,4 +1,10 @@
-<div class="backdrop"></div>
-<div class="timer-body">
-    <app-timer [time]=5 message="Stop and catch a breath." (isExpired)="checkExpiry($event)"></app-timer>
+<div class="bg">
+    <div class="backdrop"></div>
+        <div class="timer-body">
+            <div class="timer-core">
+                <app-timer [time]=2 message="Stop and catch a breath." (isExpired)="checkExpiry($event)"></app-timer>
+            </div>
+        </div>
 </div>
+<audio #breakSound loop="false" src="../assets/birds.mp3" autostart="false" width="0" height="0" id="break"
+enablejavascript="true"></audio>
